// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Locales: should render with locale of AU first and active 1`] = `
<nav
  aria-labelledby="Locales"
  role="navigation"
>
  <span
    class="root"
  >
    <h1
      id="Locales"
    >
      Select your country
    </h1>
  </span>
  <ul
    class="list"
  >
    <li>
      <span
        class="locale_isActive"
      >
        AU
      </span>
    </li>
    <li>
      <a
        class="localeLink"
        data-analytics="header:nz+homepage"
        href="https://www.seek.co.nz"
        title="SEEK New Zealand"
      >
        NZ
      </a>
    </li>
  </ul>
</nav>
`;

exports[`Locales: should render with locale of NZ first and active 1`] = `
<nav
  aria-labelledby="Locales"
  role="navigation"
>
  <span
    class="root"
  >
    <h1
      id="Locales"
    >
      Select your country
    </h1>
  </span>
  <ul
    class="list list_isNZ"
  >
    <li>
      <a
        class="localeLink"
        data-analytics="header:au+homepage"
        href="https://www.seek.com.au"
        title="SEEK Australia"
      >
        AU
      </a>
    </li>
    <li>
      <span
        class="locale_isActive"
      >
        NZ
      </span>
    </li>
  </ul>
</nav>
`;
